# cuda_coursework

./: .gitignore  README.md
Cuda_Gaussian/: .gitignore  CMakeLists.txt  main.cu
OMP_Gaussian/: CMakeLists.txt  linear.cpp  parallel.cpp
blocks/: CMakeLists.txt  main.cu
device_properties/: CMakeLists.txt  main.cu
threads/: CMakeLists.txt  main.cu
